--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -29,7 +29,7 @@ jobs:
                       pip install .[docs]
                       export PATH=$HOME/.local/bin:$PATH
                       sphinx-apidoc -f -o docs/_modules/ ./detkit
-                      python setup.py build_sphinx
+                      make html --directory=docs
                       touch docs/_build/html/.nojekyll
                       echo 'Visit [Documentation](https://ameli.github.io/detkit/index.html).' > docs/_build/html/README.md
 
