--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -16,11 +16,12 @@ recursive-include docs *.py
 recursive-include docs *.rst
 recursive-include docs *.svg
 recursive-include docs Makefile
-recursive-include _modules *.rst
-recursive-exclude docs/images *.pdf
 recursive-include docs *.bib
 recursive-include docs *.in
 recursive-include docs *.txt
+recursive-exclude docs *.pdf
+recursive-exclude docs/source *.html
+recursive-exclude docs *.html
 
 recursive-include pdet *.rst
 recursive-include examples *.py
@@ -44,10 +45,10 @@ include .dockerignore
 include docker/Dockerfile
 
 exclude TODO.rst
-exclude .travis.yml
 exclude .coverage
 exclude .gitattributes
 
+prune docs/build
 prune .git
 prune tmp
 prune .tox
