--- a/setup.cfg
+++ b/setup.cfg
@@ -13,8 +13,8 @@ addopts = --cov
 
 [check-manifest]
 ignore =
-    docs/_build
-    docs/_build/*
+    docs/build
+    docs/build/*
     notebooks/.ipynb_checkpoints
     notebooks/.ipynb_checkpoints/*
     TODO.rst
