--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -15,30 +15,18 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
+                python-version: ['3.6', '3.7', '3.8', '3.9', '3.10', 'pypy3.6', 'pypy3.7']
 
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Set up Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v4
               with:
                   python-version: ${{ matrix.python-version }}
 
-            - name: Install prerequisites
-              run: |
-                  sudo apt-get update
-                  sudo apt-get install libsuitesparse-dev
-
-            - name: Install CUDA
-              uses: Jimver/cuda-toolkit@v0.2.1
-              id: cuda-toolkit
-              with:
-                  cuda: '11.2.2'
-
             - name: Install package and dependencies (CPython)
-              if: matrix.python-version != 'pypy-3.6' && matrix.python-version != 'pypy-3.7'
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
@@ -46,28 +34,12 @@ jobs:
               env:
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
-                  USE_CBLAS: 0
-                  USE_CUDA: 1
-                  CUDA_DYNAMIC_LOADING: 1
-
-            # This does not install plot packages (matplotlib, seaborn) when
-            # using pypy, since on pypy37, the kiwisolver (a dependency of
-            # matlotlib) has no wheel candicate.
-            - name: Install package and dependencies (PyPy)
-              if: matrix.python-version == 'pypy-3.6' || matrix.python-version == 'pypy-3.7'
-              run: |
-                  python -m pip install --upgrade pip
-                  python -m pip install --upgrade numpy
-                  python -m pip install --upgrade .[extra]
-              env:
-                  USE_CUDA: 1
-                  CUDA_DYNAMIC_LOADING: 1
 
             # Despite the package is built on both cpython and pypy, here we
             # only test it on cpython, not on pypy, since many other required
             # dependencies (like matplotlib, etc) need to be compiled on pypy.
             - name: Test
-              if: matrix.python-version != 'pypy-3.6' && matrix.python-version != 'pypy-3.7'
+              if: (!contains(matrix.python-version, 'pypy'))
               run: |
                   python -m pip install --upgrade pytest
                   python -m pip install --upgrade pytest-cov
