--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -15,34 +15,21 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                python-version: ['3.6', '3.7', '3.8', '3.9']
+                python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
 
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Set up Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v4
               with:
                   python-version: ${{ matrix.python-version }}
 
             - name: Install prerequisites
               run: |
-                  brew install suite-sparse
                   brew install libomp
 
-                  # This is needed to import numpy in pypy3 (but not needed for
-                  # pypy2 and CPython)
-                  # brew install openblas
-                  # OPENBLAS="$(brew --prefix openblas)"
-                  # brew install lapack
-                  # pip3 install numpy
-                  
-            # - name: Install CUDA
-            #   uses: Jimver/cuda-toolkit@v0.2.1
-            #   id: cuda-toolkit
-            #   with:
-            #       cuda: '11.2.2'
 
             - name: Install package and dependencies
               run: |
@@ -52,8 +39,6 @@ jobs:
               env:
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
-                  USE_CBLAS: 0
-                  USE_CUDA: 0
 
             - name: Test
               run: |
