--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -1,4 +1,4 @@
-name: deploy-conda-4
+name: deploy-conda
 
 on:
     push:
@@ -19,14 +19,22 @@ jobs:
                 
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
             
             - name: Setup Python 
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v4
+              with:
+                python-version: '3.10'
 
-            - name: Install cibuildwheel
+            - name: Install cibuildwheel (not macos)
+              if: matrix.os != 'macos-latest'
               run: |
-                  python -m pip install cibuildwheel==1.11.0
+                  python -m pip install cibuildwheel==2.9.0
+
+            - name: Install cibuildwheel (macos)
+              if: matrix.os == 'macos-latest'
+              run: |
+                  python -m pip install cibuildwheel
 
             - name: Install numpy
               run: |
@@ -46,12 +54,12 @@ jobs:
             # only apply to windows, not linux and macos. To install cuda in
             # linux, see the second next actions below "Build wheel with cuda
             # support".
-            - name: Install CUDA
-              if: matrix.os == 'windows-latest'
-              uses: Jimver/cuda-toolkit@v0.2.1
-              id: cuda-toolkit
-              with:
-                  cuda: '11.2.2'
+            # - name: Install CUDA
+            #   if: matrix.os == 'windows-latest'
+            #   uses: Jimver/cuda-toolkit@v0.2.1
+            #   id: cuda-toolkit
+            #   with:
+            #       cuda: '11.2.2'
 
             # Build wheel for windows with CUDA enabled. Note that cibuildwheel
             # does not need manylinux docker, thuns, CUDA can be installed in
@@ -62,7 +70,7 @@ jobs:
               run: python -m cibuildwheel --output-dir wheelhouse
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp27-* cp35-*"
+                  CIBW_SKIP: "pp* cp27-* cp35-* cp311-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=0"
            
@@ -73,7 +81,7 @@ jobs:
               run: python -m cibuildwheel --output-dir wheelhouse
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp27-* cp35-*"
+                  CIBW_SKIP: "pp* cp27-* cp35-* cp311-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0"
 
@@ -98,7 +106,7 @@ jobs:
                   # CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
                   # CIBW_BEFORE_ALL_LINUX: chmod +x .github/scripts/install_cuda.sh && .github/scripts/install_cuda.sh
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp27-* cp35-*"
+                  CIBW_SKIP: "pp* cp27-* cp35-* cp311-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=0 CUDA_HOME=/usr/local/cuda"
             
@@ -124,10 +132,10 @@ jobs:
         # if: github.event_name == 'release' && github.event.action == 'published'
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Download artifacts
-              uses: actions/download-artifact@v2
+              uses: actions/download-artifact@v3
               with:
                   name: wheel-artifacts
                   path: dist
@@ -166,7 +174,7 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ubuntu-latest, windows-latest, macos-latest]
-                python-version: [3.6, 3.7, 3.8, 3.9]
+                python-version: [3.6, 3.7, 3.8, 3.9, 3.10]
 
         steps:
             - name: Setup Miniconda
@@ -177,7 +185,7 @@ jobs:
                   activate-environment: myenv
 
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Test
               shell: bash -l {0}
