--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -13,22 +13,29 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
-            - name: Build and Deploy
-              uses: JacksonMaxfield/github-pages-deploy-action-python@master
-              env:
-                  ACCESS_TOKEN: ${{ secrets.detkit_DOCS }}
-                  BASE_BRANCH: main
-                  BRANCH: gh-pages
-                  FOLDER: docs/build/html
-                  BUILD_SCRIPT: |
-                      apt-get update
-                      apt-get install graphviz -y
-                      pip install --upgrade pip
-                      pip install .[docs]
-                      export PATH=$HOME/.local/bin:$PATH
-                      make html --directory=docs
-                      touch docs/build/html/.nojekyll
-                      echo 'Visit [Documentation](https://ameli.github.io/detkit/index.html).' > docs/build/html/README.md
+            # Compile package with in-source build
+            - name: Install
+              run: |
+                python -m pip install --upgrade pip
+                python -m pip install -r requirements.txt
+                export CYTHON_BUILD_FOR_DOC=1
+                python setup.py install
 
+            # Build sphinx in /docs/build, copy /docs/doxygen/output/html to /docs/build/doxygen
+            - name: Build Sphinx
+              run: |
+                sudo apt-get install pandoc -y
+                python -m pip install -r docs/requirements.txt
+                export PATH=$HOME/.local/bin:$PATH
+                make clean html --directory=docs
+                touch docs/build/html/.nojekyll
+                echo 'Visit [Documentation](https://ameli.github.io/detkit/index.html).' > docs/build/html/README.md
+
+            # Deploy to github pages
+            - name: Deploy
+              uses: JamesIves/github-pages-deploy-action@v4
+              with:
+                folder: docs/build/html
+                branch: gh-pages
