--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -19,14 +19,22 @@ jobs:
                 
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
             
             - name: Setup Python 
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v4
+              with:
+                python-version: '3.10'
 
-            - name: Install cibuildwheel
+            - name: Install cibuildwheel (not macos)
+              if: matrix.os != 'macos-latest'
               run: |
-                  python -m pip install cibuildwheel==1.11.0
+                  python -m pip install cibuildwheel==2.9.0
+
+            - name: Install cibuildwheel (macos)
+              if: matrix.os == 'macos-latest'
+              run: |
+                  python -m pip install cibuildwheel
 
             - name: Install numpy
               run: |
@@ -69,7 +77,7 @@ jobs:
               run: python -m cibuildwheel --output-dir wheelhouse
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp27-* cp35-*"
+                  CIBW_SKIP: "pp* cp27-* cp35-* cp311-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=1"
            
@@ -80,7 +88,7 @@ jobs:
               run: python -m cibuildwheel --output-dir wheelhouse
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp27-* cp35-*"
+                  CIBW_SKIP: "pp* cp27-* cp35-* cp311-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_CBLAS=0 USE_CUDA=0"
 
@@ -105,12 +113,12 @@ jobs:
                   # CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
                   # CIBW_BEFORE_ALL_LINUX: chmod +x .github/scripts/install_cuda.sh && .github/scripts/install_cuda.sh
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp27-* cp35-*"
+                  CIBW_SKIP: "pp* cp27-* cp35-* cp311-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=1 CUDA_HOME=/usr/local/cuda"
             
             - name: Upload artifacts
-              uses: actions/upload-artifact@v2
+              uses: actions/upload-artifact@v3
               with:
                   path: ./wheelhouse/*.whl
                   retention-days: 1
@@ -120,16 +128,16 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Install Python
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v4
             
             - name: Build sdist
               run: python setup.py sdist
             
             - name: Upload artifacts
-              uses: actions/upload-artifact@v2
+              uses: actions/upload-artifact@v3
               with:
                   path: dist/*.tar.gz
                   retention-days: 1
@@ -145,13 +153,13 @@ jobs:
         # if: github.event_name == 'release' && github.event.action == 'published'
         steps:
             - name: Download artifacts
-              uses: actions/download-artifact@v2
+              uses: actions/download-artifact@v3
               with:
                   name: artifact
                   path: dist
             
             - name: Upload to PyPi
-              uses: pypa/gh-action-pypi-publish@master
+              uses: pypa/gh-action-pypi-publish@release/v1
               with:
                   verbose: true
                   user: __token__
@@ -170,11 +178,11 @@ jobs:
                 # other required dependencies (like matplotlib, etc) need to be
                 # compiled on pypy.
                 # python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
-                python-version: ['3.6', '3.7', '3.8', '3.9']
+                python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
 
         steps:
             - name: Setup Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v4
               with:
                   python-version: ${{ matrix.python-version }}
 
@@ -183,7 +191,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install pytest-cov
-                  python -m pip install detkit
+                  python -m pip install --upgrade detkit
 
             # This does not install plot packages (matplotlib, seaborn) when
             # using pypy, since on pypy37, the kiwisolver (a dependency of
@@ -196,7 +204,7 @@ jobs:
             #       python -m pip install detkit
 
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Test
               run: |
