--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,8 +1,12 @@
 sphinx
-sphinx_math_dollar
+sphinx-math-dollar
 sphinx-toggleprompt
-sphinx_rtd_theme
-pydata_sphinx_theme
+pydata_sphinx_theme==0.9.0
 graphviz
 sphinx-automodapi
 numpydoc
+nbsphinx
+sphinx_design
+sphinx-multitoc-numbering
+sphinx-prompt
+sphinx-copybutton
