--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -44,6 +44,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pytest
                   python -m pip install --upgrade pytest-cov
+                  python -m pip install cython
                   mv detkit detkit-DoNotImport
                   pytest
 
