--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -15,6 +15,11 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
 
+            - name: Setup Python 
+              uses: actions/setup-python@v4
+              with:
+                python-version: '3.10'
+
             # Compile package with in-source build
             - name: Install
               run: |
