--- a/setup.cfg
+++ b/setup.cfg
@@ -27,5 +27,5 @@ per-file-ignores =
     *.pyx: E225, E227, E999
     *.pxd: E225, E999
     *.pxi: E225
-    docs/conf.py: E402
+    docs/source/conf.py: E402
     setup.py: E402
