--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -1,9 +1,9 @@
 name: deploy-pypi
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types:
             - published
@@ -24,7 +24,7 @@ jobs:
             - name: Setup Python 
               uses: actions/setup-python@v4
               with:
-                python-version: '3.10'
+                python-version: '3.11'
 
             - name: Install cibuildwheel (not macos)
               if: matrix.os != 'macos-latest'
@@ -44,7 +44,19 @@ jobs:
             - name: Install OpenMP and numpy for mac
               if: runner.os == 'macos'
               run: |
-                  brew install libomp
+                  # brew install libomp
+
+                  # Starting from libomp>=15.0, the libomp installation in homebrew is "keg-only",
+                  # meaning that libomp is only installed in homebrew's directory, but not moved
+                  # to /usr/local to avoid other OpenMP installations (such as with gcc's version
+                  # of OpenMP). To use the homebrew's version of OpenMP,the following symbolic
+                  # links are created. Without these, the installation will fail with the error
+                  # of "fatal error: omp.h file found"
+                  ln -s /usr/local/opt/libomp/include/omp-tools.h /usr/local/include/omp-tools.h
+                  ln -s /usr/local/opt/libomp/include/omp.h /usr/local/include/omp.h
+                  ln -s /usr/local/opt/libomp/include/ompt.h /usr/local/include/ompt.h
+                  ln -s /usr/local/opt/libomp/lib/libomp.a /usr/local/lib/libomp.a
+                  ln -s /usr/local/opt/libomp/lib/libomp.dylib /usr/local/lib/libomp.dylib
 
                   # This is needed to import numpy in pypy3 (but not needed for
                   # pypy2 and CPython)
@@ -77,7 +89,7 @@ jobs:
               run: python -m cibuildwheel --output-dir wheelhouse
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp27-* cp35-* cp311-*"
+                  CIBW_SKIP: "pp* cp27-* cp35-* cp36-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=1"
            
@@ -88,7 +100,7 @@ jobs:
               run: python -m cibuildwheel --output-dir wheelhouse
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp27-* cp35-* cp311-*"
+                  CIBW_SKIP: "pp* cp27-* cp35-* cp36-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_CBLAS=0 USE_CUDA=0"
 
@@ -113,7 +125,7 @@ jobs:
                   # CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
                   # CIBW_BEFORE_ALL_LINUX: chmod +x .github/scripts/install_cuda.sh && .github/scripts/install_cuda.sh
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp27-* cp35-* cp311-*"
+                  CIBW_SKIP: "pp* cp27-* cp35-* cp36-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=1 CUDA_HOME=/usr/local/cuda"
             
@@ -183,7 +195,7 @@ jobs:
                 # other required dependencies (like matplotlib, etc) need to be
                 # compiled on pypy.
                 # python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
-                python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
+                python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
 
         steps:
             - name: Setup Python ${{ matrix.python-version }}
