--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -1,9 +1,9 @@
 name: deploy-pypi
 
 on:
-    push:
-        branches:
-            - main
+    # push:
+    #     branches:
+    #         - main
     release:
         types:
             - published
@@ -203,7 +203,7 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
 
-            - name: Install prerequisits
+            - name: Install prerequisites
               if: matrix.os == 'ubuntu-latest'
               run: |
                   sudo apt-get install linux-tools-common linux-tools-generic linux-tools-`uname -r`
