--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -155,10 +155,11 @@ jobs:
             - name: Setup Miniconda
               uses: conda-incubator/setup-miniconda@v2
               with:
+                  miniconda-version: "latest"
                   auto-update-conda: true
 
             - name: Build and upload package
-              shell: bash -l {0}
+              shell: bash -el {0}
               run: |
                   conda install -y conda-build anaconda-client
                   conda config --set anaconda_upload yes
