--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -19,22 +19,12 @@ jobs:
                 
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
             
             - name: Setup Python 
               uses: actions/setup-python@v4
               with:
                 python-version: '3.11'
-
-            - name: Install cibuildwheel (not macos)
-              if: matrix.os != 'macos-latest'
-              run: |
-                  python -m pip install cibuildwheel==2.9.0
-
-            - name: Install cibuildwheel (macos)
-              if: matrix.os == 'macos-latest'
-              run: |
-                  python -m pip install cibuildwheel
 
             - name: Install numpy
               run: |
@@ -65,33 +55,20 @@ jobs:
                   # brew install lapack
                   # pip3 install numpy
 
-            # To install CUDA in windows, uncomment the following lines. Note
-            # that the Jimver@cuda-toolkit action (below) can only install cuda
-            # on linux and windows, but not macos. Also, for linux, we should
-            # not install cuda here, rather it should be installed inside the
-            # manylinux docker image. Thus, the following Jimver action can
-            # only apply to windows, not linux and macos. To install cuda in
-            # linux, see the second next actions below "Build wheel with cuda
-            # support".
-            # - name: Install CUDA
-            #   if: matrix.os == 'windows-latest'
-            #   uses: Jimver/cuda-toolkit@v0.2.1
-            #   id: cuda-toolkit
-            #   with:
-            #       cuda: '11.2.2'
-
             # Build wheel for windows with CUDA enabled. Note that cibuildwheel
             # does not need manylinux docker, thuns, CUDA can be installed in
             # the github action's virtual machine using the Jimver's action
             # in the previous action (see above).
             - name: Build wheels in windows with CUDA support
               if: matrix.os == 'windows-latest'
-              run: python -m cibuildwheel --output-dir wheelhouse
+              uses: pypa/cibuildwheel@v2.15.0
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp27-* cp35-* cp36-*"
+                  CIBW_SKIP: "pp* cp36-* cp37-* cp38-* cp312-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=1"
+              with:
+                output-dir: wheelhouse
            
             # Do not enable compiling with CUDA for macos since NIVDIA no
             # longer supports CUDA in the macos.
@@ -100,7 +77,7 @@ jobs:
               run: python -m cibuildwheel --output-dir wheelhouse
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp27-* cp35-* cp36-*"
+                  CIBW_SKIP: "pp* cp36-* cp37-* cp38-* cp312-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_CBLAS=0 USE_CUDA=0"
 
@@ -119,15 +96,17 @@ jobs:
             # the user has to install cuda library themselves.
             - name: Build wheels in linux with CUDA support
               if: matrix.os == 'ubuntu-latest'
-              run: python -m cibuildwheel --output-dir wheelhouse
+              uses: pypa/cibuildwheel@v2.15.0
               env:
-                  CIBW_MANYLINUX_X86_64_IMAGE: sameli/manylinux2014_x86_64_cuda_11
+                  CIBW_MANYLINUX_X86_64_IMAGE: sameli/manylinux2014_x86_64_cuda_12.2
                   # CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
                   # CIBW_BEFORE_ALL_LINUX: chmod +x .github/scripts/install_cuda.sh && .github/scripts/install_cuda.sh
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp27-* cp35-* cp36-*"
+                  CIBW_SKIP: "pp37-* cp36-* cp37-* cp38-* cp312-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=1 CUDA_HOME=/usr/local/cuda"
+              with:
+                output-dir: wheelhouse
             
             - name: Upload artifacts
               uses: actions/upload-artifact@v3
@@ -144,6 +123,8 @@ jobs:
 
             - name: Install Python
               uses: actions/setup-python@v4
+              with:
+                python-version: '3.11'
 
             - name: Install numpy
               run: |
@@ -195,7 +176,7 @@ jobs:
                 # other required dependencies (like matplotlib, etc) need to be
                 # compiled on pypy.
                 # python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
-                python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+                python-version: ['3.9', '3.10', '3.11']
 
         steps:
             - name: Setup Python ${{ matrix.python-version }}
