--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -26,6 +26,10 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
 
+            # Install BLAS, since pypy compiles numpy and scipy from source and requires BLAS.
+            - name: Install prerequisites
+              run: sudo apt-get install gfortran libopenblas-dev liblapack-dev
+
             - name: Install package and dependencies (CPython)
               run: |
                   python -m pip install --upgrade pip
