--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -24,7 +24,7 @@ jobs:
             - name: Setup Python 
               uses: actions/setup-python@v4
               with:
-                python-version: '3.11'
+                python-version: '3.12'
 
             - name: Install numpy
               run: |
@@ -68,8 +68,9 @@ jobs:
               if: matrix.os == 'windows-latest'
               uses: pypa/cibuildwheel@v2.15.0
               env:
-                  CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp36-* cp37-* cp38-* cp312-*"
+                  CIBW_ARCHS_WINDOWS: "AMD64 x86 ARM64"
+                  CIBW_BUILD: "*-win_amd64 *-win_arm64"
+                  CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=1"
               with:
@@ -81,8 +82,9 @@ jobs:
               if: matrix.os == 'macos-latest'
               uses: pypa/cibuildwheel@v2.15.0
               env:
-                  CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp36-* cp37-* cp38-* cp312-*"
+                  CIBW_ARCHS_MACOS: "x86_64 arm64"
+                  CIBW_BUILD: "*-macosx_arm64 *-macosx_x86_64"
+                  CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_CBLAS=0 USE_CUDA=0"
               with:
@@ -108,8 +110,9 @@ jobs:
                   CIBW_MANYLINUX_X86_64_IMAGE: sameli/manylinux2014_x86_64_cuda_12.2
                   # CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
                   # CIBW_BEFORE_ALL_LINUX: chmod +x .github/scripts/install_cuda.sh && .github/scripts/install_cuda.sh
-                  CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp36-* cp37-* cp38-* cp312-*"
+                  CIBW_ARCHS_LINUX: "x86_64 aarch64"
+                  CIBW_BUILD: "*-manylinux_x86_64 *-manylinux_aarch64"
+                  CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=0 CUDA_DYNAMIC_LOADING=1 CUDA_HOME=/usr/local/cuda"
                   # CIBW_BEFORE_BUILD_LINUX: yum update; yum install gcc-gfortran openblas-devel.x86_64 lapack-devel.x86_64 -y;
@@ -132,7 +135,7 @@ jobs:
             - name: Install Python
               uses: actions/setup-python@v4
               with:
-                python-version: '3.11'
+                python-version: '3.12'
 
             - name: Install numpy
               run: |
@@ -140,7 +143,9 @@ jobs:
                   python -m pip install --upgrade numpy
             
             - name: Build sdist
-              run: python setup.py sdist
+              run: |
+                python -m pip install build
+                python -m build . --sdist
             
             - name: Upload artifacts
               uses: actions/upload-artifact@v3
@@ -184,7 +189,7 @@ jobs:
                 # other required dependencies (like matplotlib, etc) need to be
                 # compiled on pypy.
                 # python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
-                python-version: ['3.9', '3.10', '3.11']
+                python-version: ['3.9', '3.10', '3.11', '3.12']
 
         steps:
             - name: Setup Python ${{ matrix.python-version }}
