--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -26,7 +26,7 @@ jobs:
                 python -m pip install --upgrade pip
                 python -m pip install -r requirements.txt
                 export CYTHON_BUILD_FOR_DOC=1
-                python setup.py install
+                python setup.py install  # do not use "pip install ." as it fails
 
             # Build sphinx in /docs/build, copy /docs/doxygen/output/html to /docs/build/doxygen
             - name: Build Sphinx
