added pooch to conda recipe

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -34,6 +34,7 @@ requirements:
         - suitesparse
         - matplotlib
         - seaborn
+        - pooch
         - llvm-openmp  # [osx]
 
 test:
