--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,9 +1,9 @@
 name: build-linux
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types: 
             - published
@@ -34,7 +34,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
-                  python -m pip install --upgrade .[extra]
+                  python -m pip install --upgrade .[extra] -vvv
               env:
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
@@ -46,8 +46,12 @@ jobs:
                   sudo sh -c 'echo -1 >/proc/sys/kernel/perf_event_paranoid'
 
             # Despite the package is built on both cpython and pypy, here we
-            # only test it on cpython, not on pypy, since many other required
-            # dependencies (like matplotlib, etc) need to be compiled on pypy.
+            # only test it on cpython, not on pypy, since tests require numpy and scipy
+            # (although, this package itself does not have numpy and scipy dependency,
+            # but the test scripts do depend on numpy and scipy).
+            # Often in pypy these packages do not have wheels, then have to be
+            # built from source. As such, it takes forever to build these in pypy!
+            # Thus, it is just simpler to not test this package with pypy.
             - name: Test
               if: (!contains(matrix.python-version, 'pypy'))
               run: |
