--- a/.github/workflows/check-manifest.yml
+++ b/.github/workflows/check-manifest.yml
@@ -1,9 +1,9 @@
 name: "Check Manifest"
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types: [published]
 
@@ -26,5 +26,4 @@ jobs:
                   python -m pip install check-manifest
 
             - name: Check manifest
-              run: |
-                check-manifest -v
+              run: check-manifest -v
