--- a/tools/ci/cirrus_deploy_conda_linux_aarch64.yml
+++ b/tools/ci/cirrus_deploy_conda_linux_aarch64.yml
@@ -56,7 +56,7 @@ conda_build_wheels_linux_aarch64_task:
 
   build_script: |
     apt update
-    apt install -y python3-venv
+    apt install -y python3-venv python-is-python3
     git fetch origin
     which python
     echo $CIRRUS_CHANGE_MESSAGE
