--- a/tools/ci/cirrus_deploy_pypi_linux_aarch64.yml
+++ b/tools/ci/cirrus_deploy_pypi_linux_aarch64.yml
@@ -56,9 +56,9 @@ pypi_build_wheels_linux_aarch64_task:
 
   build_script: |
     apt update
-    apt install -y python3 python3-venv
+    apt install -y python3-venv python-is-python3
     git fetch origin
-    which python3
+    which python
     echo $CIRRUS_CHANGE_MESSAGE
   <<: *PYPI_LINUX_AARCH64_CIBW
 
