--- a/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
@@ -54,7 +54,7 @@ pypi_build_wheels_macosx_arm64_task:
     # CIBW_BUILD: "*-macosx_arm64"
     CIBW_SKIP: "pp37-* cp36-* cp37-* cp38-*"
     CIBW_BUILD_VERBOSITY: "3"
-    CIBW_BEFORE_BUILD: "pip install delocate"
+    CIBW_BEFORE_BUILD: "pip install delocate; brew install gcc"
     CIBW_TEST_SKIP: "*_universal2:arm64"
 
   build_script:
