--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,9 +1,9 @@
 name: build-linux
 
 on:
-    push:
-        branches:
-            - main
+    # push:
+    #     branches:
+    #         - main
     release:
         types: 
             - published
@@ -47,9 +47,7 @@ jobs:
                   sudo sh -c 'echo -1 >/proc/sys/kernel/perf_event_paranoid'
 
             # Despite the package is built on both cpython and pypy, here we
-            # only test it on cpython, not on pypy, since tests require numpy and scipy
-            # (although, this package itself does not have numpy and scipy dependency,
-            # but the test scripts do depend on numpy and scipy).
+            # only test it on cpython, not on pypy, since tests require numpy and scipy.
             # Often in pypy these packages do not have wheels, then have to be
             # built from source. As such, it takes forever to build these in pypy!
             # Thus, it is just simpler to not test this package with pypy.
