--- a/tools/ci/cirrus_deploy_pypi_linux_aarch64.yml
+++ b/tools/ci/cirrus_deploy_pypi_linux_aarch64.yml
@@ -48,7 +48,7 @@ pypi_build_wheels_linux_aarch64_task:
     # CIBW_BUILD: "*-manylinux_aarch64"
     CIBW_SKIP: "pp37-* cp36-* cp37-* cp38-*"
     CIBW_BUILD_VERBOSITY: "3"
-    MANYLINUX_AARCH64_IMAGE: "manylinux2014"
+    CIBW_MANYLINUX_AARCH64_IMAGE: "manylinux2014"
     CIBW_ENVIRONMENT: >
       USE_LONG_INT=0
       USE_UNSIGNED_LONG_INT=0
@@ -116,17 +116,26 @@ pypi_test_linux_aarch64_task:
     memory: 4G
   depends_on:
     - pypi_upload_wheels_linux_aarch64
+  matrix:
+    # - env:
+    #     PY_VER: "3.9"
+    - env:
+        PY_VER: "3.10"
+    - env:
+        PY_VER: "3.11"
+    # - env:
+    #     PY_VER: "3.12"
 
   test_script: |
     apt update
-    apt install -y python3
+    apt install -y python${PY_VER}
     set -x
-    which python3
+    which python${PY_VER}
     uname -m
-    python3 -c "import platform;print(platform.python_version());print(platform.system());print(platform.machine())"
+    python${PY_VER} -c "import platform;print(platform.python_version());print(platform.system());print(platform.machine())"
     mv detkit detkit_do_dot_import
-    python3 -m pip install --upgrade pip
-    python3 -m pip install --prefer-binary --upgrade detkit
-    python3 -m pip install numpy
-    python3 -m pip install -r tests/requirements.txt
-    python3 -m pytest
+    python${PY_VER} -m pip install --upgrade pip
+    python${PY_VER} -m pip install --prefer-binary --upgrade detkit
+    python${PY_VER} -m pip install numpy
+    python${PY_VER} -m pip install -r tests/requirements.txt
+    python${PY_VER} -m pytest
