--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -42,11 +42,24 @@ jobs:
                   ln -s /usr/local/opt/libomp/lib/libomp.a /usr/local/lib/libomp.a
                   ln -s /usr/local/opt/libomp/lib/libomp.dylib /usr/local/lib/libomp.dylib
 
-            - name: Install package and dependencies
+            - name: Install package and dependencies (not PyPy)
+              if: (!contains(matrix.python-version, 'pypy'))
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install . -vvv
               env:
+                  USE_LONG_INT: 0
+                  USE_UNSIGNED_LONG_INT: 0
+
+            # For PyPy, export OpenBLAS pkgconfig file, when pypy tries to build scipy from source
+            # which needs OpenBLAS
+            - name: Install package and dependencies (PyPy)
+              if: (contains(matrix.python-version, 'pypy'))
+              run: |
+                  python -m pip install --upgrade pip
+                  python -m pip install . -vvv
+              env:
+                  PKG_CONFIG_PATH: /usr/local/opt/openblas/lib/pkgconfig
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
 
