--- a/tools/ci/cirrus_deploy_conda_linux_aarch64.yml
+++ b/tools/ci/cirrus_deploy_conda_linux_aarch64.yml
@@ -50,9 +50,13 @@ conda_build_wheels_linux_aarch64_task:
     CIBW_BUILD_VERBOSITY: "3"
     CIBW_MANYLINUX_AARCH64_IMAGE: "manylinux2014"
     CIBW_ENVIRONMENT: >
+      USE_CBLAS=0
       USE_LONG_INT=0
       USE_UNSIGNED_LONG_INT=0
-      USE_CBLAS=0
+      USE_OPENMP=0
+      COUNT_PERF=1
+      CHUNK_TASKS=1
+      USE_SYMMETRY=1
 
   build_script: |
     apt update
