--- a/tools/ci/cirrus_deploy_conda_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_conda_macosx_arm64.yml
@@ -53,9 +53,13 @@ conda_build_wheels_macosx_arm64_task:
       CXXFLAGS="-I/opt/homebrew/opt/libomp/include $CXXFLAGS"
       LDFLAGS="-L/opt/homebrew/opt/libomp/lib $LDFLAGS"
       LIBRARY_PATH="/opt/homebrew/opt/libomp/lib:$LIBRARY_PATH"
+      USE_CBLAS=0
       USE_LONG_INT=0
       USE_UNSIGNED_LONG_INT=0
-      USE_CBLAS=0
+      USE_OPENMP=0
+      COUNT_PERF=0
+      CHUNK_TASKS=1
+      USE_SYMMETRY=1
     CIBW_ARCHS: "arm64"
     # CIBW_BUILD: "*-macosx_arm64"
     CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
