remove seaborn dependency

--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -1,9 +1,9 @@
 name: deploy-conda
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types:
             - published
@@ -29,19 +29,19 @@ jobs:
             - name: Install OpenMP for mac
               if: runner.os == 'macos'
               run: |
-                  # brew install libomp
-
                   # Starting from libomp>=15.0, the libomp installation in homebrew is "keg-only",
                   # meaning that libomp is only installed in homebrew's directory, but not moved
                   # to /usr/local to avoid other OpenMP installations (such as with gcc's version
                   # of OpenMP). To use the homebrew's version of OpenMP,the following symbolic
                   # links are created. Without these, the installation will fail with the error
                   # of "fatal error: omp.h file found"
-                  ln -s /usr/local/opt/libomp/include/omp-tools.h /usr/local/include/omp-tools.h
-                  ln -s /usr/local/opt/libomp/include/omp.h /usr/local/include/omp.h
-                  ln -s /usr/local/opt/libomp/include/ompt.h /usr/local/include/ompt.h
-                  ln -s /usr/local/opt/libomp/lib/libomp.a /usr/local/lib/libomp.a
-                  ln -s /usr/local/opt/libomp/lib/libomp.dylib /usr/local/lib/libomp.dylib
+                  brew install libomp
+                  libomp_dir=$(brew --prefix libomp)
+                  ln -sf ${libomp_dir}/include/omp-tools.h  /usr/local/include/omp-tools.h
+                  ln -sf ${libomp_dir}/include/omp.h        /usr/local/include/omp.h
+                  ln -sf ${libomp_dir}/include/ompt.h       /usr/local/include/ompt.h
+                  ln -sf ${libomp_dir}/lib/libomp.a         /usr/local/lib/libomp.a
+                  ln -sf ${libomp_dir}/lib/libomp.dylib     /usr/local/lib/libomp.dylib
 
               # Without this, installing cuda give error: no much space left on device
             - name: Clear Cache
