--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 __pycache__/
 *.py[cod]
 .ipynb_checkpoints/
+.pytest_cache/
 
 # C extensions
 *.so
@@ -46,3 +47,6 @@ docs/build/
 
 # Lint
 .ruff_cache/
+
+# Conda
+conda-bld/
