--- a/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
@@ -83,8 +83,8 @@ pypi_build_wheels_macosx_arm64_task:
     - python -c "import platform;print(platform.python_version());print(platform.system());print(platform.machine())"
     - clang --version
     # - export SDKROOT=$(xcrun --sdk macosx --show-sdk-path)
-    - export SDKROOT=`xcrun --sdk macosx --show-sdk-path`
-    - echo $SDKROOT
+    # - export SDKROOT=`xcrun --sdk macosx --show-sdk-path`
+    # - echo $SDKROOT
   <<: *PYPI_MACOSX_ARM64_CIBW
 
 
