--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -64,7 +64,7 @@ jobs:
                   USE_UNSIGNED_LONG_INT: 0
                   USE_OPENMP: 0
                   COUNT_PERF: 0
-                  CHUNK_TASKS: 1
+                  USE_LOOP_UNROLLING: 1
                   USE_SYMMETRY: 1
               with:
                 output-dir: wheelhouse
@@ -84,7 +84,7 @@ jobs:
                   USE_UNSIGNED_LONG_INT: 0
                   USE_OPENMP: 0
                   COUNT_PERF: 0
-                  CHUNK_TASKS: 1
+                  USE_LOOP_UNROLLING: 1
                   USE_SYMMETRY: 1
               with:
                 output-dir: wheelhouse
@@ -105,7 +105,7 @@ jobs:
                   USE_UNSIGNED_LONG_INT: 0
                   USE_OPENMP: 0
                   COUNT_PERF: 1
-                  CHUNK_TASKS: 1
+                  USE_LOOP_UNROLLING: 1
                   USE_SYMMETRY: 1
               with:
                 output-dir: wheelhouse
