--- a/tools/ci/cirrus_deploy_pypi_linux_aarch64.yml
+++ b/tools/ci/cirrus_deploy_pypi_linux_aarch64.yml
@@ -61,7 +61,7 @@ pypi_build_wheels_linux_aarch64_task:
       USE_UNSIGNED_LONG_INT=0
       USE_OPENMP=0
       COUNT_PERF=1
-      CHUNK_TASKS=1
+      USE_LOOP_UNROLLING=1
       USE_SYMMETRY=1
 
   build_script: |
