--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,9 +1,9 @@
 name: build-linux
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types: 
             - published
@@ -46,7 +46,7 @@ jobs:
                   USE_UNSIGNED_LONG_INT: 0
                   USE_OPENMP: 0
                   COUNT_PERF: 1
-                  CHUNK_TASKS: 1
+                  USE_LOOP_UNROLLING: 1
                   USE_SYMMETRY: 1
 
             - name: Install prerequisites for Test
