--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,9 +1,9 @@
 name: build-windows
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types: 
             - published
@@ -35,7 +35,7 @@ jobs:
                   USE_UNSIGNED_LONG_INT: 0
                   USE_OPENMP: 0
                   COUNT_PERF: 0
-                  CHUNK_TASKS: 1
+                  USE_LOOP_UNROLLING: 1
                   USE_SYMMETRY: 1
 
             - name: Test
