--- a/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
@@ -60,7 +60,7 @@ pypi_build_wheels_macosx_arm64_task:
       USE_UNSIGNED_LONG_INT=0
       USE_OPENMP=0
       COUNT_PERF=1
-      CHUNK_TASKS=1
+      USE_LOOP_UNROLLING=1
       USE_SYMMETRY=1
     CIBW_ARCHS: "arm64"
     # CIBW_BUILD: "*-macosx_arm64"
