--- a/tools/ci/cirrus_deploy_conda_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_conda_macosx_arm64.yml
@@ -68,7 +68,8 @@ conda_build_wheels_macosx_arm64_task:
   build_script:
     - uname -m
     - brew install python@3.11
-    - sudo ln -s /opt/homebrew/opt/python@3.11/bin/python3.11 /usr/bin/python
+    - sudo mkdir -p /usr/local/bin
+    - sudo ln -s /opt/homebrew/opt/python@3.11/bin/python3.11 /usr/local/bin/python
     - which python
     - python -c "import platform;print(platform.python_version());print(platform.system());print(platform.machine())"
     - clang --version
