--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -15,7 +15,8 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [ubuntu-latest, windows-latest, macos-latest]
+                # os: [ubuntu-latest, windows-latest, macos-latest]
+                os: [ubuntu-latest]
                 python-version: ['cp39', 'cp310', 'cp311', 'cp312']
         steps:
             - name: Checkout
@@ -188,7 +189,8 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [ubuntu-latest, windows-latest, macos-latest]
+                # os: [ubuntu-latest, windows-latest, macos-latest]
+                os: [ubuntu-latest]
                 python-version: ['3.9', '3.10', '3.11', '3.12']
 
         steps:
